<resources>
    <string name="app_name">Scientific Calculator</string>
    <string name="title_activity_calculadoracientifica">calculadoracientifica</string>
    <string name="az_appkey">7b38856529350f69dd91331e130b138f</string>


    <string name="banner_ad_unit_id">ca-app-pub-4769341895289435/7697356506</string>
    <string name="banner_cientifica">ca-app-pub-4769341895289435/2708753707</string>


    <string name="clear_all" translatable="false">AC</string>
    <string name="clear" translatable="false">C</string>
    <string name="numberSeven" translatable="false">7</string>
    <string name="numberFour" translatable="false">4</string>
    <string name="numberOne" translatable="false">1</string>
    <string name="numberZero" translatable="false">0</string>
    <string name="numberEight" translatable="false">8</string>
    <string name="numberFive" translatable="false">5</string>
    <string name="numberTwo" translatable="false">2</string>
    <string name="punto" translatable="false">.</string>
    <string name="raiz" translatable="false">√</string>
    <string name="numberNine" translatable="false">9</string>
    <string name="numberSix" translatable="false">6</string>
    <string name="numberThree" translatable="false">3</string>
    <string name="porciento" translatable="false">%</string>
    <string name="igual" translatable="false">=</string>
    <string name="plus_minus" translatable="false">+/-</string>
    <string name="multiply" translatable="false">x</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="division" translatable="false">/</string>
    <string name="elevado_a_menos_uno" translatable="false">1/x</string>
    <string name="degree" translatable="false">deg</string>
    <string name="radianes" translatable="false">rad</string>
    <string name="pi" translatable="false">π</string>
    <string name="absoluto" translatable="false">abs</string>
    <string name="al_cuadrado" translatable="false">x^2</string>
    <string name="hipotenusa" translatable="false">hyp</string>
    <string name="potencia" translatable="false">^</string>
    <string name="e" translatable="false">e</string>
    <string name="exponente" translatable="false">exp</string>
    <string name="al_cubo" translatable="false">x^3</string>
    <string name="seno" translatable="false">sin</string>
    <string name="coseno" translatable="false">cos</string>
    <string name="tangente" translatable="false">tan</string>
    <string name="dies_elevado" translatable="false">10^x</string>
    <string name="x_factorial" translatable="false">x!</string>
    <string name="seno_inverso" translatable="false">sin^-1</string>
    <string name="coseno_inverso" translatable="false">cos^-1</string>
    <string name="tangente_inverso" translatable="false">tan^-1</string>
    <string name="e_elevado" translatable="false">e^x</string>
    <string name="logaritmo" translatable="false">log</string>
    <string name="logaritmo_natural" translatable="false">ln</string>
    <string name="raiz_cubica" translatable="false">3√</string>
    <string name="math_error" translatable="false">Math ERROR</string>
    <string name="random" translatable="false">Rand</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="back_to_activity">Back to activity</string>


</resources>
